# avito_merch

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  run.py
alembic/: env.py
alembic/versions/: 25714ffdf987_init_migration.py  4af00076901a_init_migration.py
app/: __init__.py  config.py  errors_handlers.py  exceptions.py  main.py  schemas.py
app/api/: auth.py  example.py  pull_request.py  team.py  user.py
app/database/: base.py  init_db.py  models.py
app/database/repositories/: employee.py  pull_request.py  team.py  user.py
app/dependencies/: auth.py
app/schemas/: auth.py  pull_request.py  team.py  user.py
app/services/: __init__.py  employee.py  pull_request.py  team.py  user.py
app/services.py/: employee.py
app/utils/: auth.py
